log

Wed 13 Mar 2024 08:33:39 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1995e41
Wed 13 Mar 2024 08:37:00 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:7: error: variable ‘nuevoArr’ set but not used [-Werror=unused-but-set-variable]
   27 |   int nuevoArr[size];
      |       ^~~~~~~~
exercises.c:26:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   26 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ff4ffa9
Wed 13 Mar 2024 08:40:25 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:1: error: expected expression before ‘}’ token
   29 | }
      | ^
exercises.c:26:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   26 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
6e7addc
Wed 13 Mar 2024 08:41:31 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:26:7: error: array size missing in ‘nuevo’
   26 |   int nuevo[];
      |       ^~~~~
exercises.c:26:7: error: variable ‘nuevo’ set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
Compilation failed
a43c16e
Wed 13 Mar 2024 08:42:52 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   27 |   for (int i = 0 ; i < size; i++)
      |   ^~~
exercises.c:29:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   29 |     arr[0] = temp;
      |     ^~~
exercises.c:29:12: error: ‘temp’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   29 |     arr[0] = temp;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e37cfca
Wed 13 Mar 2024 08:49:17 PM UTC: 
 exercises.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:36:7: error: array size missing in ‘arreglo’
   36 |   int arreglo[];
      |       ^~~~~~~
Compilation failed
7185f59
